fix: login form on mobile devices

--- a/src/css/form.sass
+++ b/src/css/form.sass
@@ -3,6 +3,8 @@
     grid-template-columns: repeat(8, minmax(0, 1fr))
     align-items: center
     justify-items: center
+    @media screen and ( max-width: 1023px )
+        display: block
 .form-img
     grid-column: 2/4
     grid-row: 1
